{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 134,
  "lineage": "ae0f3141-0fec-3f01-e49f-d1859dc0b8a6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2-bastion-host-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae92f383a4b423b7",
            "association_id": "eipassoc-03f9042810b47be73",
            "domain": "vpc",
            "id": "eipalloc-0ae92f383a4b423b7",
            "instance": "i-02b902964c69a80b2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0be61c378d7023fb6",
            "private_dns": "ip-172-0-1-134.ec2.internal",
            "private_ip": "172.0.1.134",
            "public_dns": "ec2-44-218-24-195.compute-1.amazonaws.com",
            "public_ip": "44.218.24.195",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "bastion Host Elastic IP"
            },
            "tags_all": {
              "Name": "bastion Host Elastic IP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ec2-bastion-host",
            "aws_instance.jenkins_server",
            "aws_key_pair.bugsquasherkey",
            "aws_security_group.bastion-sg",
            "aws_security_group.jenkins-sg",
            "data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-bastion-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f34c5ae932e6f0e4",
            "arn": "arn:aws:ec2:us-east-1:293864649505:instance/i-02b902964c69a80b2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02b902964c69a80b2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bugsquasherkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0be61c378d7023fb6",
            "private_dns": "ip-172-0-1-134.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.0.1.134",
            "public_dns": "ec2-44-218-24-195.compute-1.amazonaws.com",
            "public_ip": "44.218.24.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:293864649505:key/27842a5c-9ea1-4898-9d81-ee72bb676416",
                "tags": {
                  "Name": "bastion root block dev"
                },
                "throughput": 0,
                "volume_id": "vol-0c0a14493e4fe7706",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-094cddcb306c035af",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0820a47c8fbfa0d05"
            ]
          },
          "dependencies": [
            "aws_instance.jenkins_server",
            "aws_key_pair.bugsquasherkey",
            "aws_security_group.bastion-sg",
            "aws_security_group.jenkins-sg",
            "data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a3db6a6bb59b68d3",
            "arn": "arn:aws:ec2:us-east-1:293864649505:instance/i-0e09da399aee83f39",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e09da399aee83f39",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "bugsquasherkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c3f63b65c1b8f91d",
            "private_dns": "ip-172-0-2-28.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.0.2.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0349687d22b73a851",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-012b9959d700ad717",
            "tags": {
              "Name": "bugsquasher_jenkins_server"
            },
            "tags_all": {
              "Name": "bugsquasher_jenkins_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aac82b5443da1ae9"
            ]
          },
          "dependencies": [
            "aws_security_group.jenkins-sg",
            "data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293864649505:security-group/sg-0820a47c8fbfa0d05",
            "description": "Security group for bastion host instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0820a47c8fbfa0d05",
            "ingress": [
              {
                "cidr_blocks": [
                  "73.110.238.26/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "293864649505",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-043164c28ec0a475b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293864649505:security-group/sg-0559beb83513d282a",
            "description": "Security group for database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0559beb83513d282a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "database-sg",
            "name_prefix": "",
            "owner_id": "293864649505",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-043164c28ec0a475b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293864649505:security-group/sg-0aac82b5443da1ae9",
            "description": "Security group for jenkins instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aac82b5443da1ae9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins-sg",
            "name_prefix": "",
            "owner_id": "293864649505",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-043164c28ec0a475b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293864649505:network-acl/acl-0718e65a2d69673fb",
            "default_network_acl_id": "acl-0718e65a2d69673fb",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0718e65a2d69673fb",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "293864649505",
            "subnet_ids": [
              "subnet-012b9959d700ad717",
              "subnet-094cddcb306c035af",
              "subnet-0c57ddbe19f18987f"
            ],
            "tags": {
              "Environment": "Prod",
              "Name": "bugsquashers-VPC-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "bugsquashers-VPC-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-043164c28ec0a475b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293864649505:route-table/rtb-004270fee45b2df8f",
            "default_route_table_id": "rtb-004270fee45b2df8f",
            "id": "rtb-004270fee45b2df8f",
            "owner_id": "293864649505",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Prod",
              "Name": "bugsquashers-VPC-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "bugsquashers-VPC-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-043164c28ec0a475b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293864649505:security-group/sg-09bcff59e9117cde9",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-09bcff59e9117cde9",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "293864649505",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Prod",
              "Name": "bugsquashers-VPC-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "bugsquashers-VPC-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-043164c28ec0a475b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fc13a7cdc10152d9",
            "association_id": "eipassoc-0d5dde91b0bde28c4",
            "domain": "vpc",
            "id": "eipalloc-0fc13a7cdc10152d9",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01c36f17e2040e162",
            "private_dns": "ip-172-0-1-232.ec2.internal",
            "private_ip": "172.0.1.232",
            "public_dns": "ec2-35-173-102-222.compute-1.amazonaws.com",
            "public_ip": "35.173.102.222",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Prod",
              "Name": "bugsquashers-VPC-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "bugsquashers-VPC-us-east-1a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293864649505:internet-gateway/igw-0a695ba5667c31e26",
            "id": "igw-0a695ba5667c31e26",
            "owner_id": "293864649505",
            "tags": {
              "Environment": "Prod",
              "Name": "bugsquashers-VPC",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "bugsquashers-VPC",
              "Terraform": "true"
            },
            "vpc_id": "vpc-043164c28ec0a475b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fc13a7cdc10152d9",
            "association_id": "eipassoc-0d5dde91b0bde28c4",
            "connectivity_type": "public",
            "id": "nat-0205019c50c817598",
            "network_interface_id": "eni-01c36f17e2040e162",
            "private_ip": "172.0.1.232",
            "public_ip": "35.173.102.222",
            "subnet_id": "subnet-094cddcb306c035af",
            "tags": {
              "Environment": "Prod",
              "Name": "bugsquashers-VPC-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "bugsquashers-VPC-us-east-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0202a62a752dd61881080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0205019c50c817598",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0202a62a752dd6188",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a695ba5667c31e26",
            "id": "r-rtb-00c50127c64e6bb741080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00c50127c64e6bb74",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293864649505:route-table/rtb-0202a62a752dd6188",
            "id": "rtb-0202a62a752dd6188",
            "owner_id": "293864649505",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0205019c50c817598",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Prod",
              "Name": "bugsquashers-VPC-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "bugsquashers-VPC-private",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-043164c28ec0a475b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293864649505:route-table/rtb-00c50127c64e6bb74",
            "id": "rtb-00c50127c64e6bb74",
            "owner_id": "293864649505",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a695ba5667c31e26",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Prod",
              "Name": "bugsquashers-VPC-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "bugsquashers-VPC-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-043164c28ec0a475b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec7533085ecf977d",
            "route_table_id": "rtb-0202a62a752dd6188",
            "subnet_id": "subnet-012b9959d700ad717"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e5ecea5c3d5182f",
            "route_table_id": "rtb-0202a62a752dd6188",
            "subnet_id": "subnet-0c57ddbe19f18987f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031b7013e44ba485c",
            "route_table_id": "rtb-00c50127c64e6bb74",
            "subnet_id": "subnet-094cddcb306c035af"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293864649505:subnet/subnet-012b9959d700ad717",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012b9959d700ad717",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "293864649505",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Prod",
              "Name": "bugsquashers-VPC-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "bugsquashers-VPC-private-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-043164c28ec0a475b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293864649505:subnet/subnet-0c57ddbe19f18987f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c57ddbe19f18987f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "293864649505",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Prod",
              "Name": "bugsquashers-VPC-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "bugsquashers-VPC-private-us-east-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-043164c28ec0a475b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293864649505:subnet/subnet-094cddcb306c035af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094cddcb306c035af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "293864649505",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Prod",
              "Name": "bugsquashers-VPC-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "bugsquashers-VPC-public-us-east-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-043164c28ec0a475b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:293864649505:vpc/vpc-043164c28ec0a475b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.0.0.0/16",
            "default_network_acl_id": "acl-0718e65a2d69673fb",
            "default_route_table_id": "rtb-004270fee45b2df8f",
            "default_security_group_id": "sg-09bcff59e9117cde9",
            "dhcp_options_id": "dopt-0fc4c21d6255ded32",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-043164c28ec0a475b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-004270fee45b2df8f",
            "owner_id": "293864649505",
            "tags": {
              "Environment": "Prod",
              "Name": "bugsquashers-VPC",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "bugsquashers-VPC",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}